<resources>
    <string name="app_name">Two Activities</string>
    <string name="send">Send</string>
    <string name="text_header">Message Receiver</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
</resources>